5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1675_2471.log
== TEST (2019-05-01 22:17:36) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)
if()
-- ERROR:
File "XXXX", line 4
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:17:47) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:22:15) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

if(x < 45 and y < 22):
	print("Risco: Baixo")
else:
	if()
-- ERROR:
File "XXXX", line 8
    if()
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:26:51) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

if(x < 45 and y < 22):
	print("Risco: Baixo")
else:
	if(x < 45 and y >= 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y < 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y >= 22.0):
		print("Risco: Alto")
	elif(x <= 0 or x > 130 or y <0):
		print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:27:42) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

if(x < 45 and y < 22):
	print("Risco: Baixo")
else:
	if(x < 45 and y >= 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y < 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y >= 22.0):
		print("Risco: Alto")
	elif(x <= 0 or x > 130 or y <0):
		print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:28:35) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

if(x < 45 and y < 22):
	print("Risco: Baixo")
else:
	if(x < 45 and y >= 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y < 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y >= 22.0):
		print("Risco: Alto")
	elif((x <= 0) or (x > 130) or (y < 0)):
		print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:30:15) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

if(x < 45 and y < 22):
	print("Risco: Baixo")
else:
	if(x < 45 and x > 0 and y >= 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y < 22.0 and y > 0):
		print("Risco: Medio")
	elif(x >= 45 and y >= 22.0):
		print("Risco: Alto")
	elif((x <= 0) or (x > 130) or (y <= 0)):
		print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Risco: Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:30:53) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

if(x < 45 and x > 0 and y < 22 and y > 0):
	print("Risco: Baixo")
else:
	if(x < 45 and x > 0 and y >= 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y < 22.0 and y > 0):
		print("Risco: Medio")
	elif(x >= 45 and y >= 22.0):
		print("Risco: Alto")
	elif((x <= 0) or (x > 130) or (y <= 0)):
		print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 22:31:02) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

if(x < 45 and x > 0 and y < 22 and y > 0):
	print("Risco: Baixo")
else:
	if(x < 45 and x > 0 and y >= 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y < 22.0 and y > 0):
		print("Risco: Medio")
	elif(x >= 45 and y >= 22.0):
		print("Risco: Alto")
	elif((x <= 0) or (x > 130) or (y <= 0)):
		print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 22:31:07) 
-- CODE:
x = int(input("idade: "))
y = float(input("IMC: "))
print("Entradas:", x , "anos", "e", "IMC", y)

if(x < 45 and x > 0 and y < 22 and y > 0):
	print("Risco: Baixo")
else:
	if(x < 45 and x > 0 and y >= 22.0):
		print("Risco: Medio")
	elif(x >= 45 and y < 22.0 and y > 0):
		print("Risco: Medio")
	elif(x >= 45 and y >= 22.0):
		print("Risco: Alto")
	elif((x <= 0) or (x > 130) or (y <= 0)):
		print("Dados invalidos")
-- EXECUTION TIME:
0.151245
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
